<resources>
    <string name="app_name">BigClass</string>
    <string name="login">LOG IN</string>
    <string name="regist">SIGN UP</string>
    <string name="forgetpass">忘记密码</string>
    <string name="submit">S U B M I T</string>
    <string name="ok">O K</string>
    <string name="resend">重发</string>
    <string name="verifycode">验证码</string>
    <string name="passwd">密码</string>
    <string name="confirm_passwd">密码确认</string>
    <string name="username">用户名</string>
    <string name="sex">性别</string>
    <string name="academy">学院</string>
    <string name="name">姓名</string>
    <string name="major">专业</string>
    <string name="classX">班级</string>
    <string name="email">邮箱</string>
    <string name="regist_tool">用户注册</string>
    <string name="next">下一步</string>
    <string name="sendverifycode">邮箱/用户名</string>
    <string name="forget_tool">找回密码</string>
    <string name="send">发送验证码</string>
    <string name="completepersonalinfo">完善个人信息</string>
    <string name="place">地点:</string>
    <string name="time">时间:</string>
    <string name="grade">绩点</string>
    <string name="studentnumber">参加人数</string>
    <string name="select_major">选择专业</string>
    <string name="back">返回</string>
    <string name="sign">签到</string>
    <string name="quit">退选</string>
    <string name="wifi">WI-FI:</string>
    <string name="gpa">GPA:</string>
    <string name="create_time">创建时间:</string>
    <string name="join_number">报名人数:</string>
    <string name="class_start">上课时间:</string>
    <string name="class_state">上课状态:</string>
    <string name="class_content">上课内容:</string>
    <string name="class_place">上课地点</string>
    <string name="create_academy">开设学院</string>
    <string name="join_class">加入课程</string>
    <string name="signhistory">签到记录</string>
    <string name="coursehistory">课程历史</string>
    <string-array name="sex">
        <item>♂ 男生</item>
        <item>♀ 女生</item>
    </string-array>
    <string-array name="grade">
        <item>1301</item>
        <item>1302</item>
        <item>1303</item>
        <item>1304</item>
        <item>1305</item>
        <item>1306</item>
        <item>1401</item>
        <item>1402</item>
        <item>1403</item>
        <item>1404</item>
        <item>1405</item>
        <item>1406</item>
        <item>1501</item>
        <item>1502</item>
        <item>1503</item>
        <item>1504</item>
        <item>1505</item>
        <item>1506</item>
        <item>1601</item>
        <item>1602</item>
        <item>1603</item>
        <item>1604</item>
        <item>1605</item>
        <item>1606</item>
        <item>1701</item>
        <item>1702</item>
        <item>1703</item>
        <item>1704</item>
        <item>1705</item>
        <item>1706</item>
    </string-array>
</resources>
