<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/transprant"
        android:navigationIcon="@mipmap/nva_con"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@mipmap/nva_con"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/forget_tool"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/logo"
        android:layout_below="@+id/toolbar"
        android:gravity="center_vertical"
        android:paddingLeft="55dp"
        android:paddingRight="55dp">

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/MyEditText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_code"
                    android:layout_width="20dp"
                    android:layout_height="50dp"
                    android:layout_weight="8"
                    android:hint="@string/verifycode"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:theme="@style/MyEditText" />

                <Button
                    android:id="@+id/button3"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="3"
                    android:background="@color/transprant"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_passwd"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/passwd"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/MyEditText" />

            <EditText
                android:id="@+id/edit_passwdconfirm"

                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/confirm_passwd"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/MyEditText" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@id/text_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_selector"
            android:text="@string/ok" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="292dp"
        android:layout_height="164dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
