<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/imageView"
        android:gravity="center_vertical"
        android:paddingLeft="55dp"
        android:paddingRight="55dp"
        android:paddingTop="30dp">

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/edit_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:hint="用户名"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/MyEditText" />

            <EditText
                android:id="@+id/edit_passwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/passwd"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/MyEditText" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/tv_forget"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="忘记密码"
                    android:textColor="@color/red"
                    android:textSize="16sp" />


            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_layout"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="110dp"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/button_selector"
                    android:text="@string/login" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_regist"
                    android:layout_width="110dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/button_white_selector"
                    android:text="@string/regist" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="292dp"
        android:layout_height="164dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>





