<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:fresco="http://schemas.android.com/apk/res-auto"
                android:id="@+id/itemView"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/white_bg"
                android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv_coursename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="数据结构"
            android:textAlignment="center"
            android:textColor="@color/textcolor5"
            android:textSize="20sp"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin1"
        android:layout_marginLeft="8dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/course_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            fresco:roundAsCircle="true"/>


    </FrameLayout>


    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin1"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/frame"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dfsf"
                android:textColor="@color/textcolor5"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place"
                    android:textAlignment="viewStart"

                    android:textColor="@color/textcolor5"/>

                <TextView
                    android:id="@+id/tv_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="ffgjkkk"
                    android:textAlignment="viewStart"

                    android:textColor="@color/textcolor5"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textAlignment="viewStart"

                    android:textColor="@color/textcolor5"/>

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="ffgjkkk"
                    android:textAlignment="viewStart"

                    android:textColor="@color/textcolor5"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade"
                    android:textAlignment="viewStart"

                    android:textColor="@color/textcolor5"/>

                <TextView
                    android:id="@+id/tv_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="ffgjkkk"
                    android:textAlignment="viewStart"

                    android:textColor="@color/textcolor5"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/studentnumber"
                    android:textAlignment="viewStart"
                    android:textColor="@color/textcolor5"/>

                <TextView
                    android:id="@+id/tv_studentnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="ffgjkkk"
                    android:textAlignment="viewStart"
                    android:textColor="@color/textcolor5"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/course_state"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        fresco:actualImageScaleType="centerCrop"
        fresco:placeholderImage="@mipmap/logo"
        fresco:roundWithOverlayColor="@color/transprant"
        fresco:roundedCornerRadius="10dp"
        fresco:viewAspectRatio="1.4"/>


</RelativeLayout>